# cfind

./: .gitignore  CMakeLists.txt  README.md  config_tests.sh
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  analyzer.cpp  analyzer.hpp  cdiff.cpp  cfind.hpp  cli.cpp  cli.hpp  console.cpp  console.hpp  crypto.cpp  crypto.hpp  fileprocessor.cpp  fileprocessor.hpp  io.cpp  io.hpp  log.cpp  log.hpp  main.cpp  projectinfo.cpp.in  projectinfo.hpp
tests/: CMakeLists.txt  test.cpp  testcfind.cpp  testcli.cpp
tests/data/basic_data/dest/: onlydest.txt
tests/data/basic_data/source/: onlyinsource.txt
tests/data/large_files/dest/: 1M_file  plus_1M_file  plus_1M_file_only_in_dest  plus_1k_file  plus_1k_file_only_in_dest
tests/data/large_files/source/: 1k_file  plus_1M_file_only_in_source  plus_1k_file_only_in_source
